2009-11-18  Kaz Kylheku  <kkylheku@gmail.com>

	txr.1: Clarified handling of UTF-8, now that it's precise and portable.

2009-11-18  Kaz Kylheku  <kkylheku@gmail.com>

	Version 023

	Minor bugfix.

	Code cleanup. Portability.

	Completely removed dependency on C99 wide character stream functions,
	and character encoding support from glibc. All UTF-8 encoding
	and decoding is done by the program itself.

	Removed the use of all GNU extensions and C99 syntax.

	txr now requires a C90 compiler, and POSIX 1003.1 and 1003.2.

	* txr.c (version): Bumped to 023.

	* txr.1: Bumped version to 023.

2009-11-17  Kaz Kylheku  <kkylheku@gmail.com>

	More removal of C99 wide character I/O, and tightening up
	of standard conformance.

	* configure (lang_flags): Specify -D_POSIX_C_SOURCE=2 to obtain
	POSIX 1003.1 and POSIX 1003.2 functions from the headers,
	without GNU extensions. Specify -std=c89 to get C89 conformance
	from gcc. 

	* match.c (dump_byte_string): New function.
	(dump_shell_string): Retargetted to object streams.
	(dump_var, dump_bindings): Retargetted to object streams.
	Changed back to using a byte string for the array index prefixes,
	to avoid using the wide-character swprintf.

	* parser.l (grammar): Eliminate wcsdup uses in favor of chk_strdup.
	Not only is wcsdup a GNU extension, it doesn't have the OOM check.

	* stream.c: Added <sys/wait.h> header to define WIFEXITED and others.

	* txr.c: Added include of <stdarg.h>. Removed <locale.h>,
	(main): Removed setlocale call. Not needed any more, since wide
	stream and string I/O is no longer used from the C library.

2009-11-17  Kaz Kylheku  <kkylheku@gmail.com>

	Removing use of C99 wide character I/O.

	* stream.c (BROKEN_POPEN_GETWC): Macro removed. Work around no
	longer needed since the program does not call getwc.
	(struct stdio_handle): #ifdef text removed.
	New member added: utf8 decoder.
	(stdio_maybe_read_error, stdio_maybe_write_error): Treat